# Autonomous-robot-simulation

./: .gitignore  Assessment of path planning algorithms.ipynb  README.md
ira_laser_tools/launch/: laserscan_multi_merger.launch
omni3ros_pkg/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner.yaml  joint_velocity.yaml  local_costmap_params.yaml  local_planner.yaml  rviz_config.rviz
omni3ros_pkg/launch/: amcl.launch  amcl_fake.launch  camera_to_scan.launch  gazebo_rviz_controllers.launch  gmapping.launch  laserscans_merger.launch  map_server.launch  move_base.launch  robot_localization.launch  urdf_gazebo_view.launch  urdf_rviz_view.launch  velocity_controller.launch
omni3ros_pkg/maps/: airport_terminal.pgm  airport_terminal.yaml  big_room.pgm  big_room.yaml  biolab.pgm  biolab.yaml  cafe.pgm  cafe.yaml  empty_room.pgm  empty_room.yaml  maze_dynamic.yaml  maze_static.pgm  maze_static.yaml  metro.pgm  metro.yaml
omni3ros_pkg/mesh/model/: base.stl  rim.stl  (+1 more)
omni3ros_pkg/urdf/: main.urdf.xacro
omni3ros_pkg/worlds/: airport_terminal.world  big_room.world  biolab.world  cafe_simplified.world  conference_room.world  conference_room3.world  maze.world  maze_dynamic.world  maze_static.world  metro.world  metro2.world  obstacles.world  simple_world.world
teleop_keyboard_omni3/: CMakeLists.txt  odom_publisher.py  odom_tf_publisher.py  package.xml  teleop_keyboard_omni3.py  wheel_controller.py
tests/: CMakeLists.txt  assess_local_path_planning.py  assess_localization.py  package.xml  publish_true_position.py  visualize_velocity_profile.py
(+33 files in other folders)
