<?xml version="1.0"?>
<package>
  <name>teleop_keyboard_omni3</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for 3 wheeled omnidirectional robots.</description>

  <maintainer email="oganesman8@gmail.com">Oganes Manasian</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_keyboard_omni3</url>

  <author>Oganes Manasian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
