<?xml version="1.0"?>
<package>
  <name>tests</name>
  <version>0.0.0</version>
  <description>Package for robot systems profiling.</description>

  <maintainer email="oganesman8@gmail.com">Oganes Manasian</maintainer>

  <license>BSD</license>

  <author>Oganes Manasian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
